make gather_train_data use logger + return errors gracefully

--- a/meson.build
+++ b/meson.build
@@ -363,6 +363,7 @@ executable('train_rdt',
 
 executable('train_joint_dist',
            [ 'src/train_joint_dist.cc',
+             'src/glimpse_log.c',
              'src/train_utils.cc',
              'src/image_utils.cc',
              'src/tinyexr.cc',
@@ -374,6 +375,7 @@ executable('train_joint_dist',
 
 executable('train_joint_params',
            [ 'src/train_joint_params.cc',
+             'src/glimpse_log.c',
              'src/infer.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
