Add test_rdt tool for measuring classification accuracy
Given an index of test images and one or more decision trees the tool
will run label inference across all the images to measure our accuracy.

Per-image we calculate a per-label accuracy based on how many of our
best-guess labels match the training image labels, then we average those
to get an image accuracy figure.

At the end we report average, median, best and worst image accuracy figures.
A histogram visualizing the distribution of image accuracies is also printed.

--- a/meson.build
+++ b/meson.build
@@ -362,6 +362,21 @@ executable('train_rdt',
            include_directories: inc,
            dependencies: [ libpng_dep, threads_dep ])
 
+executable('test_rdt',
+           [ 'src/test_rdt.cc',
+             'src/glimpse_rdt.cc',
+             'src/glimpse_log.c',
+             'src/glimpse_config.cc',
+             'src/train_utils.cc',
+             'src/image_utils.cc',
+             'src/loader.cc',
+             'src/infer.cc',
+             'src/tinyexr.cc',
+             'src/parson.c',
+             'src/llist.c',
+             'src/xalloc.c' ],
+           include_directories: inc,
+           dependencies: [ libpng_dep, threads_dep ])
 
 executable('train_joint_dist',
            [ 'src/train_joint_dist.cc',
