config: generalize to save/load props to/from a JSON_Value
To help support cases where a file might contain multiple sets of
properties we no have gm_props_to/from_json functions that work with a
JSON_Value instead of parsing or serializing to a string.

E.g. the plan is for test_rdt to support reading a queue of work with
separate property configurations for each job.

Note: this renames glimpse_config.h/cc to glimpse_properties.h/cc since
it seems to better match the gm_prop_/gm_props_ api namespacing.

--- a/meson.build
+++ b/meson.build
@@ -137,7 +137,7 @@ imgui_src = [
 ]
 
 client_api_src = [
-    'src/glimpse_config.cc',
+    'src/glimpse_properties.cc',
     'src/glimpse_context.cc',
     'src/glimpse_device.cc',
     'src/glimpse_record.cc',
@@ -350,7 +350,7 @@ executable('train_rdt',
            [ 'src/train_rdt.c',
              'src/glimpse_rdt.cc',
              'src/glimpse_log.c',
-             'src/glimpse_config.cc',
+             'src/glimpse_properties.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
              'src/loader.cc',
@@ -366,7 +366,7 @@ executable('test_rdt',
            [ 'src/test_rdt.cc',
              'src/glimpse_rdt.cc',
              'src/glimpse_log.c',
-             'src/glimpse_config.cc',
+             'src/glimpse_properties.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
              'src/loader.cc',
