loader: take JSON_Value not string loading from JSON
It's possible a JSON file may contain more than just a single decision
tree so allow for something else to handle opening and parsing a json
file and then requesting to load an RDTree from a specific JSON_Value

This also updates most of the loader apis to take a gm_logger and report
an error string on failure instead of assuming it's ok to write to
stderr.

--- a/meson.build
+++ b/meson.build
@@ -407,6 +407,7 @@ executable('train_joint_params',
 
 executable('depth2labels',
            [ 'src/depth2labels.cc',
+             'src/glimpse_log.c',
              'src/infer.cc',
              'src/image_utils.cc',
              'src/loader.cc',
@@ -429,6 +430,7 @@ executable('pfm-to-exr',
 
 executable('rdt-to-json',
            [ 'src/rdt-to-json.c',
+             'src/glimpse_log.c',
              'src/loader.cc',
              'src/parson.c',
              'src/xalloc.c' ],
@@ -436,6 +438,7 @@ executable('rdt-to-json',
 
 executable('json-to-rdt',
            [ 'src/json-to-rdt.c',
+             'src/glimpse_log.c',
              'src/loader.cc',
              'src/parson.c',
              'src/xalloc.c' ],
@@ -443,6 +446,7 @@ executable('json-to-rdt',
 
 executable('jip-to-json',
            [ 'src/jip-to-json.c',
+             'src/glimpse_log.c',
              'src/loader.cc',
              'src/parson.c',
              'src/llist.c',
