move loader.cc/h to rdt_tree.cc/h + namespace api
For now this leave the jip related api unchanged and still part of the
same file, but this should be split out.

--- a/meson.build
+++ b/meson.build
@@ -147,7 +147,7 @@ client_api_src = [
     'src/glimpse_gl.c',
 
     'src/infer.cc',
-    'src/loader.cc',
+    'src/rdt_tree.cc',
     'src/xalloc.c',
     'src/image_utils.cc',
     'src/llist.c',
@@ -353,7 +353,7 @@ executable('train_rdt',
              'src/glimpse_properties.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/tinyexr.cc',
              'src/parson.c',
              'src/llist.c',
@@ -369,7 +369,7 @@ executable('test_rdt',
              'src/glimpse_properties.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/infer.cc',
              'src/tinyexr.cc',
              'src/parson.c',
@@ -396,7 +396,7 @@ executable('train_joint_params',
              'src/infer.cc',
              'src/train_utils.cc',
              'src/image_utils.cc',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/tinyexr.cc',
              'src/parson.c',
              'src/llist.c',
@@ -410,7 +410,7 @@ executable('depth2labels',
              'src/glimpse_log.c',
              'src/infer.cc',
              'src/image_utils.cc',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/tinyexr.cc',
              'src/parson.c',
              'src/llist.c',
@@ -431,7 +431,7 @@ executable('pfm-to-exr',
 executable('rdt-to-json',
            [ 'src/rdt-to-json.c',
              'src/glimpse_log.c',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/parson.c',
              'src/xalloc.c' ],
            include_directories: inc)
@@ -439,7 +439,7 @@ executable('rdt-to-json',
 executable('json-to-rdt',
            [ 'src/json-to-rdt.c',
              'src/glimpse_log.c',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/parson.c',
              'src/xalloc.c' ],
            include_directories: inc)
@@ -447,7 +447,7 @@ executable('json-to-rdt',
 executable('jip-to-json',
            [ 'src/jip-to-json.c',
              'src/glimpse_log.c',
-             'src/loader.cc',
+             'src/rdt_tree.cc',
              'src/parson.c',
              'src/llist.c',
              'src/xalloc.c' ],
