split out jip api from rdt_tree.cc

--- a/meson.build
+++ b/meson.build
@@ -148,6 +148,7 @@ client_api_src = [
 
     'src/infer.cc',
     'src/rdt_tree.cc',
+    'src/jip.cc',
     'src/xalloc.c',
     'src/image_utils.cc',
     'src/llist.c',
@@ -447,7 +448,7 @@ executable('json-to-rdt',
 executable('jip-to-json',
            [ 'src/jip-to-json.c',
              'src/glimpse_log.c',
-             'src/rdt_tree.cc',
+             'src/jip.cc',
              'src/parson.c',
              'src/llist.c',
              'src/xalloc.c' ],
