rename train_utils.cc with gm_data_* api to glimpse_data.cc

--- a/meson.build
+++ b/meson.build
@@ -352,7 +352,7 @@ executable('train_rdt',
              'src/glimpse_rdt.cc',
              'src/glimpse_log.c',
              'src/glimpse_properties.cc',
-             'src/train_utils.cc',
+             'src/glimpse_data.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/tinyexr.cc',
@@ -368,7 +368,7 @@ executable('test_rdt',
              'src/glimpse_rdt.cc',
              'src/glimpse_log.c',
              'src/glimpse_properties.cc',
-             'src/train_utils.cc',
+             'src/glimpse_data.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/infer.cc',
@@ -382,7 +382,7 @@ executable('test_rdt',
 executable('train_joint_dist',
            [ 'src/train_joint_dist.cc',
              'src/glimpse_log.c',
-             'src/train_utils.cc',
+             'src/glimpse_data.cc',
              'src/image_utils.cc',
              'src/tinyexr.cc',
              'src/parson.c',
@@ -394,8 +394,8 @@ executable('train_joint_dist',
 executable('train_joint_params',
            [ 'src/train_joint_params.cc',
              'src/glimpse_log.c',
+             'src/glimpse_data.cc',
              'src/infer.cc',
-             'src/train_utils.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/tinyexr.cc',
@@ -461,7 +461,7 @@ executable('pfm-debug',
 executable('index-to-recording',
            [ 'src/index-to-recording.cc',
              'src/glimpse_log.c',
-             'src/train_utils.cc',
+             'src/glimpse_data.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/tinyexr.cc',
