Add functions to compare tracking with target motion capture data
- Add functions to load skeletons from JSON, and add accessors for bone
  data, to enable comparing of bone angles.
- Add a new struct and functions, gm_target, that can load an index of
  skeletons and provides functions to compare against a given skeleton.
- Add functionality to glimpse_viewer to load skeleton indices, visualise
  the current difference between the tracked skeleton and the target and
  progress through target frames when the tracked skeleton matches the
  target within a configurable error margin.

--- a/meson.build
+++ b/meson.build
@@ -153,6 +153,7 @@ client_api_src = [
     'src/glimpse_mem_pool.cc',
     'src/glimpse_log.c',
     'src/glimpse_gl.c',
+    'src/glimpse_target.cc',
 
     'src/infer_labels.cc',
     'src/infer_joints.cc',
