Move infer.cc infer_labels.cc
The intent is to then split this into infer_labels.cc and
infer_joints.cc + find a home for the other misc utilities.

'inference' seems like too broad of a term to collect code under. The
joint inference seems entirely orthogonal and so do the [re]project
functions.

--- a/meson.build
+++ b/meson.build
@@ -146,7 +146,7 @@ client_api_src = [
     'src/glimpse_log.c',
     'src/glimpse_gl.c',
 
-    'src/infer.cc',
+    'src/infer_labels.cc',
     'src/rdt_tree.cc',
     'src/jip.cc',
     'src/xalloc.c',
@@ -371,7 +371,7 @@ executable('test_rdt',
              'src/glimpse_data.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
-             'src/infer.cc',
+             'src/infer_labels.cc',
              'src/tinyexr.cc',
              'src/parson.c',
              'src/llist.c',
@@ -395,7 +395,7 @@ executable('train_joint_params',
            [ 'src/train_joint_params.cc',
              'src/glimpse_log.c',
              'src/glimpse_data.cc',
-             'src/infer.cc',
+             'src/infer_labels.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/tinyexr.cc',
@@ -409,7 +409,7 @@ executable('train_joint_params',
 executable('depth2labels',
            [ 'src/depth2labels.cc',
              'src/glimpse_log.c',
-             'src/infer.cc',
+             'src/infer_labels.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/tinyexr.cc',
