Split joint inference code into infer_joints.{cc,h}
The label and joint inference code is orthogonal so it can be neatly
separated. The [re]project() functions were only used by the
glimpse_python code which isn't be actively maintained currently so
those utilities have simply been moved to the top of glimpse_python.cc
(untested).

--- a/meson.build
+++ b/meson.build
@@ -147,6 +147,7 @@ client_api_src = [
     'src/glimpse_gl.c',
 
     'src/infer_labels.cc',
+    'src/infer_joints.cc',
     'src/rdt_tree.cc',
     'src/jip.cc',
     'src/xalloc.c',
@@ -396,6 +397,7 @@ executable('train_joint_params',
              'src/glimpse_log.c',
              'src/glimpse_data.cc',
              'src/infer_labels.cc',
+             'src/infer_joints.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
              'src/tinyexr.cc',
