--- a/meson.build
+++ b/meson.build
@@ -49,6 +49,9 @@ if compiler.get_define('__ENVIRONMENT_IPHONE_OS_VERSION_MIN_REQUIRED__') != ''
     add_languages('objc')
     platform_ios = true
     client_api_defines += [ '-D__IOS__' ]
+    if get_option('default_library') != 'static'
+        error('IOS doesn\'t support shared libraries, so you must configure with --default-library=static')
+    endif
 else
     platform_ios = false
 endif
