Add a tool to do offline motion capture from recordings
This adds a tool that can load a glimpse recording and output files and
an index that can be read in via gm_target or gm_skeleton_new_from_json.

This also introduces a change to the recording device that stops is from
sending frames when no frame request has been made, and also adds a
configuration property to disable frame-skipping.

--- a/meson.build
+++ b/meson.build
@@ -462,6 +462,11 @@ executable('depth2labels',
            include_directories: inc,
            dependencies: [ libpng_dep, threads_dep ])
 
+executable('recording2target',
+           [ 'src/recording2target.cc' ] + client_api_src,
+           include_directories: inc,
+           dependencies: client_api_deps)
+
 executable('exr-to-pfm',
            [ 'src/exr-to-pfm.cc',
              'src/tinyexr.cc' ],
