image-pre-processor: share the load_flip_map_from_label_map util
The image pre-processor also flips labels based on the opposite mappings
found in label maps so this updates image-pre-processor to use the same
utility code for loading a flip mapping from a label map.

--- a/meson.build
+++ b/meson.build
@@ -384,7 +384,10 @@ executable('image-pre-processor',
            [ 'src/image-pre-processor.cc',
              'src/tinyexr.cc',
              'src/parson.c',
+             'src/glimpse_log.c',
+             'src/glimpse_data.cc',
              'src/image_utils.cc',
+             'src/rdt_tree.cc',
              'src/xalloc.c' ],
            include_directories: inc,
            dependencies: [ libpng_dep, threads_dep ])
