--- a/meson.build
+++ b/meson.build
@@ -384,7 +384,9 @@ executable('image-pre-processor',
            [ 'src/image-pre-processor.cc',
              'src/tinyexr.cc',
              'src/parson.c',
+             'src/perlin.c',
              'src/glimpse_log.c',
+             'src/glimpse_properties.cc',
              'src/glimpse_data.cc',
              'src/image_utils.cc',
              'src/rdt_tree.cc',
