--- a/meson.build
+++ b/meson.build
@@ -172,6 +172,7 @@ client_api_src = [
     'src/glimpse_device.cc',
     'src/glimpse_record.cc',
     'src/glimpse_assets.c',
+    'src/glimpse_data.cc',
     'src/glimpse_mem_pool.cc',
     'src/glimpse_log.c',
     'src/glimpse_gl.c',
