Replace train_joint_dist with annotate_bone_map
Instead of recording the distance between all permutations of joints,
record the lengths of bones using the bone map, and annotate the bone map.

--- a/meson.build
+++ b/meson.build
@@ -427,8 +427,8 @@ executable('test_rdt',
            include_directories: inc,
            dependencies: [ libpng_dep, threads_dep ])
 
-executable('train_joint_dist',
-           [ 'src/train_joint_dist.cc',
+executable('annotate_bone_map',
+           [ 'src/annotate_bone_map.cc',
              'src/glimpse_log.c',
              'src/glimpse_data.cc',
              'src/image_utils.cc',
