annotate_bone_map: Calculate bone rotation limits
Note, the algorithm to calculate the rotation limits is dependent on
the order in which it visits bones, so results with different numbers of
threads differs.

I plan on changing this to an algorithm that isn't order-dependent.

--- a/meson.build
+++ b/meson.build
@@ -437,7 +437,7 @@ executable('annotate_bone_map',
              'src/llist.c',
              'src/xalloc.c' ],
            include_directories: inc,
-           dependencies: [ libpng_dep, threads_dep ])
+           dependencies: [ libpng_dep, threads_dep, glm_dep ])
 
 executable('train_joint_params',
            [ 'src/train_joint_params.cc',
