--- a/.gitignore
+++ b/.gitignore
@@ -28,15 +28,24 @@ tree?.json
 /src/python/glimpse.py
 /src/python/glimpse_wrap.cpp
 /subprojects/boost_1_65_1
+/subprojects/boost_1_69_0
 /subprojects/dlib
 /subprojects/eigen-git-mirror-3.3.4
+/subprojects/flann
 /subprojects/flann-1.9.1
 /subprojects/glm-0.9.9-a2
+/subprojects/glfw
+/subprojects/glfm
+/subprojects/libepoxy
+/subprojects/libfreenect
+/subprojects/libfreenect-glimpse
 /subprojects/libpng-1.6.17
 /subprojects/pcl
 /subprojects/packagecache/0.9.9-a2.tar.gz
 /subprojects/packagecache/1.9.1.tar.gz
 /subprojects/packagecache/boost_1_65_1.tar.bz2
+/subprojects/packagecache/boost_1_69_0.tar.bz2
 /subprojects/packagecache/eigen-git-mirror-3.3.4.zip
 /subprojects/packagecache/libpng-1.6.17.tar.xz
 /subprojects/packagecache/tmp*
+/subprojects/zlib-1.2.8
